--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+   <div id="fb-root"></div>
+   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v5.0"></script>
    <div id="volley">Volley Ball</div>
    <div id="firevolley">
       <img src="firevolley.png" width="400px" height="120px">
@@ -402,6 +404,7 @@
          </li>
       </ul>
    </div>
+   <div class="fb-comments" data-href="https://hoyicheng88.github.io/web_project/index2.html" data-width="800" data-numposts="5"></div>
 </body>
 
 </html>
