--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<title>Entrance</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet" />
@@ -13,26 +13,25 @@
 <body>
 <div id="header-wrapper">
 	<div id="header" class="container">
-		<div id="logo">
-			<h1><a href="#">Volley Ball</a></h1>
-		</div>
+		
 		<div id="menu">
 			<ul>
-				<li><a href="https://zh-tw.facebook.com/pages/%E6%B5%B7%E5%A4%A7%E8%B3%87%E5%B7%A5%E7%B3%BB%E6%8E%92/181381435230267" accesskey="2">facebook</a></li>
-				<li><a href="https://www.instagram.com/ntou_oh_see_wow/?hl=zh-tw" accesskey="3">Instagram</a></li>
-				<li><a href="mailto:a0903885890@gmail.com" accesskey="4">Gmail</a></li>
+				<li ><a class="big"href="https://zh-tw.facebook.com/pages/%E6%B5%B7%E5%A4%A7%E8%B3%87%E5%B7%A5%E7%B3%BB%E6%8E%92/181381435230267" accesskey="2">facebook</a></li>
+				<li ><a class="big"href="https://www.instagram.com/ntou_oh_see_wow/?hl=zh-tw" accesskey="3">Instagram</a></li>
+				<li ><a class="big"href="mailto:a0903885890@gmail.com" accesskey="4">Gmail</a></li>
+				<li ><a class="big"href="排球小教室-00757024+00757039.pptx" accesskey="4">說明文件</a></li>
 			</ul>
 		</div>
 	</div>
 	<div id="banner" class="container">
 		<div class="title">
-			<h2>The Game---------</h2>
-			<span class="byline">Let's play volleyball together!</span>
+			<h2>Volley~</h2>
+			<span class="byline">It’s either in your heart or it’s in your face!</span>
 		</div>
-		<ul class="actions">
-			<li><a href="index2.html" class="button">Enter
-			</a></li>
-		</ul>
+		<div class="actions">
+			<a href="index2.html" class="button">Enter
+			</a>
+		</div>
 	</div>
 </div>
 </body>
