--- a/index2.html
+++ b/index2.html
@@ -86,7 +86,7 @@
                </nav>
             </a></li>
          <li><a href="#spike">
-               <nav style="left: 390px;">Spike
+               <nav style="left: 390px;">Attack
                   <ul>
                      <li><a href="#ballpath">球路</a></li>
                      <li><a href="#serve">發球</a></li>
@@ -216,7 +216,9 @@
             背2:舉球員後方，跟2號一樣<br>
             背長:舉球員後方，跟6號一樣<br>
             後排: 球位置在離網一米五的位置，高度可高可低，約二號的高度最佳<br>
+            <video src="前.mp4"width="1000px" controls loop></video>
          </p>
+
          <p id="serve">
             <h3>發球</h3>
             1.<a href="https://www.youtube.com/watch?v=5juYvvDIM1s">強發</a><br>
@@ -240,7 +242,8 @@
             7.攔網後應隨著球的去向準備下一個動作，過程中應將視線儘量跟著球走。<br><br>
             <iframe width="896" height="488" src="https://www.youtube-nocookie.com/embed/pMoIfKDSTBk" frameborder="0"
                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-               <img src="我壓.jpg" width="1000px"><img src="攔網.jpg" width="1000px"><img src="萬歲攔網.png"width="1000px>
+               <img src="我壓.jpg" width="1000px"><img src="攔網.jpg" width="1000px"><img src="萬歲攔網.png"width="1000px">
+               <video src="後.mp4" controls loop width="1000px"></video>
          </p>
          <p id="cover">
             <h3>Cover(補防)</h3>
@@ -331,6 +334,7 @@
          </p>
       </div>
    </div>
+   <div id="kkkk"></div>
    <div class="slider_container">
       <div>
          <img src="round1.PNG" alt="pure css3 slider" width="580px" height="387px" />
