--- a/index2.html
+++ b/index2.html
@@ -408,7 +408,7 @@
          </li>
       </ul>
    </div>
-   <div class="fb-comments" data-href="https://hoyicheng88.github.io/web_project/index2.html" data-width="800" data-numposts="5"></div>
+   <div id="fb"class="fb-comments" data-href="https://hoyicheng88.github.io/web_project/index2.html" data-width="800" data-numposts="5"></div>
 </body>
 
 </html>
