--- a/index2.html
+++ b/index2.html
@@ -328,7 +328,7 @@
                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </p>
          <p id="Thales Hoss">
-            <h3>Thales Hoss--美國</h3>
+            <h3>Thales Hoss--巴西</h3>
             <iframe width="896" height="488" src="https://www.youtube-nocookie.com/embed/w0Y1LfkPLgI" frameborder="0"
                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </p>
