--- a/index2.html
+++ b/index2.html
@@ -221,8 +221,10 @@
 
          <p id="serve">
             <h3>發球</h3>
-            1.<a href="https://www.youtube.com/watch?v=5juYvvDIM1s">強發</a><br>
-            2.<a href="https://www.youtube.com/watch?v=LRqB-3xPOJ4">跳飄</a>
+            <h5>1.強發</h5>
+            <iframe width="896" height="488" src="https://www.youtube-nocookie.com/embed/5juYvvDIM1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h5>2.跳飄</h5>
+            <iframe width="896" height="488" src="https://www.youtube-nocookie.com/embed/LRqB-3xPOJ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </p>
       </div>
       <div id="defense" class="tab-inner">
